NDS-220 Add text-shadow 0.5 for preheading for issue with 1.5px inherited text-shadow issue (NDS-221). Change padding for column-list for BNF/C Medical Devices boxed list spacing issue.

--- a/components/nds-column-list/scss/column-list.scss
+++ b/components/nds-column-list/scss/column-list.scss
@@ -10,8 +10,8 @@
     border: 1px solid $nds-colour-border;
 
     li {
-      // Make room for the anchor focus outline and breathing space around items
-      padding: rem($nds-spacing-small) rem($nds-spacing-medium);
+      // Make room for the anchor focus outline
+      padding: rem($nds-spacing-small $nds-spacing-medium);
     }
 
     a {
